# daemon

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  mcp_server.py  parser.py
data/: daemon.md
templates/: index.html
